--- a/nextapi/strategic/package.json
+++ b/nextapi/strategic/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "mongodb": "^4.8.1",
     "mongoose": "^6.6.0",
-    "next": "latest",
+    "next": "12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0"
