--- a/nextapi/strategic/package.json
+++ b/nextapi/strategic/package.json
@@ -6,12 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "dns": "^0.2.2",
     "mongodb": "^4.8.1",
     "mongoose": "^6.6.0",
+    "net": "^1.0.2",
     "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tls": "^0.0.1",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
